Fix main page nav bar overlap

--- a/styles/home.scss
+++ b/styles/home.scss
@@ -12,11 +12,14 @@
   text-align: center;
 }
 
-
 .order-button {
   font-size: 40px;
-  font-family: 'Lato', sans-serif;
-  color: #FFFFFF;
+  font-family: "Lato", sans-serif;
+  color: #ffffff;
   background-color: #ff782e;
   border: 2px solid #ff782e;
+}
+
+#hero-carousel {
+  padding-top: 5em;
 }
